# GenericF2PY

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.rst  UPLOAD_TO_PyPI.BAT  build_38_win.bat  build_all_win.bat  build_python_from_src.txt  build_results.txt  build_src_dist.bat  history_from_github_api.py  install_linux_headers.txt  metadata_reset.py  nosetests_details.txt  pyenv_help.txt  pyproject.toml  run_setup_build_win32.bat  run_setup_build_win64.bat  set_tox_path.bat  setup.cfg  setup.py  setup_ubuntu_f2py.txt  setup_v1.py  setup_v2.py  tox.ini  venv_runs.txt
chk_generic_f2py/: HINTS.TXT  hi_ftn.cp37-win32.pyd  hi_ftn.f  hi_ftn.pyf  run_f2py.bat  run_hi_ftn.py  run_py27_64_f2py.bat  run_py37_64_f2py.bat  run_py37_f2py.bat  set_env_for_f2py.bat  set_env_for_py27_64_f2py.bat  set_py37_64env_for_f2py.bat  set_py37env_for_f2py.bat  setup_compile.py
chk_generic_f2py/src/: checkout.py  fprog.f  make_32bit.bat  make_64bit.bat  make_py37_32.bat  make_py37_64.bat
docs/: Makefile  conf.py  copyright.rst  ftnproject.rst  functions.rst  history.rst  index.rst  installgfortran.rst  make.bat  quickstart.rst  spelling_correct_wordlist.txt  userinstructions.rst
genericf2py/: _version.py  main.py  nosetests_details.txt
genericf2py/examples/: example_1.py
genericf2py/src/: checkout.py  fprog.cp37-win32.pyd  fprog.cp37-win_amd64.pyd  fprog.f  fprog.inc  make_py38_win32bit.bat  make_win64bit.bat
genericf2py/tests/: test_main.py
temp/: future-0.17.1-cp37-none-any.whl  genericf2py-0.1.12-cp37-cp37m-win32.whl
